k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: neocare

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      serviceAccountName: aws-csi-secret-manager

      containers:
        - name: backend
          image: PLACEHOLDER
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets"
              readOnly: true

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "neocare-secrets"
