k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: neocare
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
#done
